# HR_Monitor_NeuroHack

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
alembic/: env.py
backend/: .env.prod  Dockerfile  README.md  application.py  init.sql  pyproject.toml  run.sh  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_10_05_0201-fd6a678261a1_init_creation_table.py  2024_10_05_0230-a0fa6302b66b_add_default.py  2024_10_05_1011-5a38c105ed2b_changed_field_to_foreign_key.py  2024_10_05_1317-6ef00f3accda_updated_user_and_vacancy_tables.py  2024_10_05_1328-6c378094dcbe_smth.py  2024_10_05_1633-3f0837e02fdf_add_employee.py  2024_10_06_0126-8a064488aeab_some_updates.py  2024_10_06_0130-57a6149ba5e5_some_updates.py  2024_10_06_1056-ba07a7d1a019_another_fix.py  2024_10_06_1128-6b5241f4f1e1_update_user_2_column.py  2024_10_06_1316-353565055145_add_new_colums_to_vacancy.py  2024_10_06_1410-2187dd6259d0_add_new_table.py  2024_10_06_1742-3e8408ffa53c_added_new_metrics.py
backend/api/: base_route.py
backend/database/: db.py  models.py
backend/scripts/: generate.py  generate_puzikov.py
backend/src/: __main__.py  application.py  schemas.py  settings.py
backend/src/api/: base_route.py
backend/src/api/v1/: __init__.py  deps.py
backend/src/api/v1/candidates/: roures.py  routes.py
backend/src/api/v1/interviews/: roures.py  routes.py
backend/src/api/v1/metrics/: routes.py
backend/src/api/v1/reports/: routes.py
backend/src/api/v1/tasks/: routes.py
backend/src/api/v1/users/: roures.py  routes.py
backend/src/api/v1/vacancies/: roures.py  routes.py
backend/src/api/v1/vacancy_files/: roures.py  routes.py
backend/src/database/: db.py  models.py
backend/src/repositiry/: repo.py
backend/src/schema/: schemas.py
backend/src/scripts/: README.md  generate.py  generate_puzikov.py
nginx/: nginx.conf
ui/: Dockerfile
ui/hacaton/: package-lock.json
ui/hr-metrics-app/: README.md  package-lock.json  package.json
ui/hr-metrics-app/public/: index.html
ui/hr-metrics-app/src/: App.vue  api.js  main.js
ui/hr-metrics-app/src/components/: AppNavbar.vue  BarChart.vue  KanbanBoard.vue
ui/hr-metrics-app/src/layouts/: DefaultLayout.vue
ui/hr-metrics-app/src/mixins/: orderMixin.js  recrutersMixin.js
ui/hr-metrics-app/src/routes/: index.js
ui/hr-metrics-app/src/views/: BarChart.vue  CabinetPage.vue  CandidatesPage.vue  InterviewsPage.vue  KanbanBoard.vue  VacanciesPage.vue
ui/hr-metrics-app/src/views/metrics/: averageHire.vue  hireQuality.vue  (+1 more)
ui/my-app/: package-lock.json  package.json
ui/my-app/src/: App.tsx  LineChart.ts
