[tool.poetry]
name = "hr-monitor-6146"
version = "0.1.0"
description = ""
authors = ["Александр Мамедов <anifan01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
ruff = "^0.6.9"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
python-jose = "^3.3.0"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
greenlet = "^3.1.1"
python-dotenv = "^1.0.1"
faker = "^30.1.0"
xlsxwriter = "^3.2.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "D1", "D203", "D213", "G004", "FA", "ANN101", "ANN102", "EXE002"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "S101",
    "PLR2004",
    "S311",
]
"tests/_fixtures.py" = ["E501"]